# osArchive

./: .gitignore  LICENSE  README.md  RELEASE_NOTES_0.1.md  launch.py  pyproject.toml
design-preview/: index.html  script.js  styles.css
docs/superpowers/plans/: 2026-06-18-osint-tool-implementation.md  2026-06-20-maltego-style-graph-view.md  2026-06-20-maltego-style-transforms.md
docs/superpowers/specs/: 2026-06-18-osint-tool-design.md  2026-06-19-tools-tab-username-scan-design.md  2026-06-20-maltego-style-transforms-design.md
linux/: README.md  osArchive.desktop  osArchive.sh
osint_tool/: app.py  models.py
osint_tool/data/: db.py  repositories.py
osint_tool/imports/: __init__.py  targets.py
osint_tool/lookups/: links.py  technical.py
osint_tool/transforms/: __init__.py  core.py  sherlock_sites.json  technical.py  username.py
osint_tool/ui/: board.py  graph_layout.py  inspector.py  main_window.py  sidebar.py  theme.py  tkcompat.py
tests/: test_app.py  test_db.py  test_design_preview.py  test_graph_layout.py  test_imports.py  test_inspector_footer.py  test_lookup_links.py  test_packaging.py  test_repositories.py  test_target_imports.py  test_technical_lookup.py  test_transforms_technical.py  test_transforms_username.py  test_ui_theme.py
windows/: README.md  osArchive.bat  osArchive.ps1
