[project]
name = "osint-tool"
version = "0.1.0"
description = "Local OSINT investigation board"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
osarchive = "osint_tool.app:main"

[tool.setuptools.package-data]
osint_tool = ["transforms/*.json"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
